--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -2,4 +2,4 @@
 <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 
-<link href="stylesheets/custom.css" rel="stylesheet" type="text/css">
+<link href="{{ root_url }}/stylesheets/custom.css" rel="stylesheet" type="text/css">
