migrated a lot of the sanitarium content

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,5 +1,5 @@
 <hgroup>
-  <img src="images/pp.png" style="display: block; float: right;">
+  <img src="{{ root_url }}/images/pp.png" style="display: block; float: right;">
   <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
