use slash theme

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,17 +1,4 @@
-<ul class="main-navigation">
-    <li><a href="{{ root_url }}/">
-        <span class="blue_light">
-            {{ site.title }}
-        </span>
-       {% if site.subtitle %}
-           <h2></h2>
-           <span class="blue_dark">
-             {{ site.subtitle }}
-           </span>
-       {% endif %}
-    </a></li>
-  <li><a href="{{ root_url }}/blog">Blog</a></li>
-  <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
-  <li><a href="{{ root_url }}/projects">Projects</a></li>
-  <li><a href="{{ root_url }}/contact">Contact Me</a></li>
+<ul class="main">
+	<li><a href="{{ root_url }}/">Blog</a></li>
+	<li><a href="{{ root_url }}/blog/archives">Archives</a></li>
 </ul>
