--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,4 +1,6 @@
-<h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
+<div style="display: block">
+	<h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
+</div>
 <nav id="main-nav">{% include navigation.html %}</nav>
 <nav id="mobile-nav">
 	<div class="alignleft menu">
@@ -16,6 +18,12 @@
 	</div>
 </nav>
 <nav id="sub-nav" class="alignright">
+	<form class="search" action="{{ site.simple_search }}" method="get">
+		<input class="alignright" type="text" name="q" results="0">
+		<input type="hidden" name="q" value="site:{{ site.url | shorthand_url }}">
+	</form>
+</nav>
+<nav id="sub-nav" class="alignleft">
 	<div class="social">
 		{% if site.facebook_user %}
 		<a class="facebook" href="http://www.facebook.com/{{ site.facebook_user }}" title="Facebook">Facebook</a>
@@ -42,9 +50,5 @@
 		<a class="rss" href="{{ site.subscribe_rss }}" title="RSS">RSS</a>
 		{% endif %}
 	</div>
-	<form class="search" action="{{ site.simple_search }}" method="get">
-		<input class="alignright" type="text" name="q" results="0">
-		<input type="hidden" name="q" value="site:{{ site.url | shorthand_url }}">
-	</form>
 </nav>
 {% include custom/header.html %}
