--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,6 +1,17 @@
-<ul class="main">
-	<li><a href="{{ root_url }}/">Blog</a></li>
-	<li><a href="{{ root_url }}/blog/archives">Archives</a></li>
-  <li><a href="{{ root_url }}/projects">Projects</a></li>
-  <li><a href="{{ root_url }}/about">About Me</a></li>
+<!-- use full url including 'index.html' for navigation bar if you are using ajax -->
+<ul id="nav">
+	<li id="ajax"><a href="{{ root_url }}/index.html">Home</a></li>
+	<li id="ajax"><a href="{{ root_url }}/blog/archives/index.html">Archives</a></li>
+        <li id="ajax"><a href="{{ root_url }}/projects/index.html">Projects</a></li>
+	<li id="ajax"><a href="{{ root_url }}/about/index.html">@alexbevi</a></li>
+    <li><a href="{{ root_url }}/atom.xml">RSS</a></li>
+    {% if site.simple_search %}
+    <li>
+    <div id="dark">
+        <form method="get" action="{{ root_url }}/search.html" id="search">
+            <input name="query" type="text" placeholder="Search..." x-webkit-speech />
+        </form>
+    </div>
+    </li>
+    {% endif %}    
 </ul>
