--- a/sass/_greyshade.scss
+++ b/sass/_greyshade.scss
@@ -172,7 +172,13 @@ body {
 	}
 	.left-col {
 		width: 23%;
-		position: fixed;		
+		position: fixed;
+		opacity: .3;
+		-webkit-transition: all .2s ease-in;
+		-moz-transition: all .2s ease-in;
+		-o-transition: all .2s ease-in;
+		-ms-transition: all .2s ease-in;
+		transition: all .2s ease-in;
 		height: 100%;
 		.intrude-less {
 			width: 80%;
