--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,3 +1,5 @@
+// This File is imported last, and will override other styles in the cascade
+// Add styles here to make changes without digging in too much
 .google-form-wrapper {
   .error {
     color: red;
