add linkedin share support

--- a/source/_layouts/base.html
+++ b/source/_layouts/base.html
@@ -27,7 +27,8 @@
   {% include external/google_analytics.html %}
   {% include external/disqus.html %}
   {% include external/facebook_like.html %}
-  {% include external/google_plus_one.html %}
+  {% include external/google_plus_one.html %}  
   {% include external/twitter_sharing.html %}
+  {% include external/linkedin_share.html %}
 </body>
 </html>
