--- a/source/_includes/post/sharing.html
+++ b/source/_includes/post/sharing.html
@@ -5,6 +5,12 @@
   {% if site.google_plus_one %}
   <div class="g-plusone" data-size="{{ site.google_plus_one_size }}"></div>
   {% endif %}
+  {% if site.linkedin_share %}
+    <script src="//platform.linkedin.com/in.js" type="text/javascript">
+    lang: en_US
+  </script>
+  <script type="IN/Share" data-url="{{ site.url }}{{ page.url }}" data-counter="right"></script>
+  {% endif %}
   {% if site.facebook_like %}
     <div class="fb-like" data-send="true" data-width="450" data-show-faces="false"></div>
   {% endif %}
