--- a/source/_includes/custom/asides/book.html
+++ b/source/_includes/custom/asides/book.html
@@ -9,4 +9,14 @@
     <li>Real-world examples that will help you in building cross-platform applications using Redmine</li>
     <li>Full of illustrations, tips, and tricks to facilitate the development of plugins and extensions</li>
   </ul>
-</section> 
+
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- General Ad Unit -->
+  <ins class="adsbygoogle"
+       style="display:inline-block;width:300px;height:600px"
+       data-ad-client="ca-pub-6215800856413580"
+       data-ad-slot="4883562355"></ins>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</section>
