updated to with the galleria tag plugin

--- a/source/_includes/site/head.html
+++ b/source/_includes/site/head.html
@@ -33,4 +33,5 @@
         <link href="{{ root_url }}/favicon.png" rel="icon">
         <link href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet">
         <link href="{{ root_url }}{{ site.subscribe_rss }}" rel="alternate" title="{{ site.title }}" type="application/atom+xml">
+        {% galleria_includes %}
     </head>
