--- a/source/_includes/site/head.html
+++ b/source/_includes/site/head.html
@@ -34,4 +34,5 @@
         <link href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet">
         <link href="{{ root_url }}{{ site.subscribe_rss }}" rel="alternate" title="{{ site.title }}" type="application/atom+xml">
         {% galleria_includes %}
+        <link href='{{ root_url }}/stylesheets/data-table.css' rel='stylesheet' type='text/css'>
     </head>
