--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -34,7 +34,7 @@
         </div>
 
         {% include site/footer.html %}
-
+        {% include after_footer.html %}
         {% include javascripts/scripts.html %}
 
     </body>
