--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -6,7 +6,9 @@ is_post: true
 <article class="article article--single">
     {% include blog/post/article.html %}
 </article>
-
+{% unless page.sharing == false %}
+  {% include post/sharing.html %}
+{% endunless %}
 {% if site.disqus_short_name and page.comments == true %}
 <section id="disqus">
     <h1 class="disqus__title">Comments</h1>
