--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,6 +1,7 @@
 <ul class="menu">
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+  <li><a href="{{ root_url }}/reviews">Reviews</a></li>
   <li><a href="{{ root_url }}/projects">Projects</a></li>
   <li><a href="{{ root_url }}/about">About Me</a></li>
 </ul>
