--- a/source/_includes/post/sharing.html
+++ b/source/_includes/post/sharing.html
@@ -14,4 +14,5 @@
   {% if site.facebook_like %}
     <div class="fb-like" data-send="true" data-width="450" data-show-faces="false"></div>
   {% endif %}
+  <script type="text/javascript" src="//www.reddit.com/buttonlite.js?i=5"></script>
 </div>
