--- a/source/_layouts/page_with_comments.html
+++ b/source/_layouts/page_with_comments.html
@@ -4,7 +4,6 @@ is_page: true
 ---
 
 <article class="page">
-
     {% if page.title and page.show_title != false %}
     <header>
         <h1 class="page__title">
@@ -18,6 +17,18 @@ is_page: true
 </article>
 
 <section id="disqus">
-    <h1 class="disqus__title">Comments</h1>
-    <div id="disqus_thread" aria-live="polite">{% include blog/post/disqus_thread.html %}</div>
+   <h4 class="disqus__title">Comments</h4>
+   <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES * * */
+        var disqus_shortname = 'alexbevi';
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </section>
