--- a/sass/oscailte/_variables.scss
+++ b/sass/oscailte/_variables.scss
@@ -39,7 +39,7 @@ $heading--h6:                16px !default;
 $breakpoint--xsmall-end: 48em !default;
 $breakpoint--small-end:  62em !default;
 $breakpoint--medium-end: 75em !default;
-$grid--max-width:        64em !default;
+// $grid--max-width:        64em !default;
 
 
 // HEADER VARIABLES
