--- a/sass/oscailte/layout/_grid.scss
+++ b/sass/oscailte/layout/_grid.scss
@@ -19,7 +19,7 @@
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin: auto;
-  max-width: $grid--max-width;
+  // max-width: $grid--max-width;
 }
 
 .row.reverse {
