--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,5 +1,10 @@
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
-
+<style>
+  .gist-data {
+    height: 250px;
+    overflow-y: visible;
+}
+</style>
 {% galleria_includes %}
