--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,7 @@
 layout: page
 # The Home page layout
 ---
-
-{% assign pinned = site.posts | where_exp: "item", "item.pin == true"  %}
+{% assign pinned = site.posts | where_exp: "item", "item.pin == true" %}
 {% assign default = site.posts | where_exp: "item", "item.pin != true"  %}
 {% assign posts = "" | split: "" %}
 
@@ -38,7 +37,6 @@ layout: page
   {% endfor %}
 {% endif %}
 
-
 <div id="post-list">
 
 {% for post in posts %}
@@ -54,8 +52,16 @@ layout: page
       </p>
     </div>
 
+    {% if post.pin %}
     <div class="post-meta text-muted d-flex justify-content-between">
+      <div class="pin">
+        <i class="fas fa-thumbtack fa-fw"></i>
+        <span>{{ site.data.label.pin_prompt | default: 'Pinned' }}</span>
+      </div>
+    </div>
+    {% endif %}
 
+    <div class="post-meta text-muted d-flex justify-content-between">
       <div>
         <!-- posted date -->
         <i class="far fa-calendar fa-fw"></i>
@@ -74,10 +80,13 @@ layout: page
         {% endif %}
       </div>
 
-      {% if post.pin %}
-      <div class="pin">
-        <i class="fas fa-thumbtack fa-fw"></i>
-        <span>{{ site.data.label.pin_prompt | default: 'Pinned' }}</span>
+      {% if post.categories.size > 0 %}
+      <div class="post-meta mb-3">
+        <i class="far fa-folder-open fa-fw mr-1"></i>
+        {% for category in post.categories %}
+          <a href='{{ site.baseurl }}/categories/{{ category | slugify | url_encode }}/'>{{ category }}</a>
+          {%- unless forloop.last -%}, {%- endunless -%}
+        {% endfor %}
       </div>
       {% endif %}
 
