--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,7 @@
 ---
 ---
 
-@import "{{ site.theme }}"
+// see: /_sass/addon/commons.scss
+$tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 
-// add your style below
+@import "jekyll-theme-chirpy";
