--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,7 +31,9 @@
     {{ site.title }}
   </title>
 
-  {% include favicons.html %}
+  <!-- {% include favicons.html %} -->
+  <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico" type="image/x-icon">
+
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
