--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,8 @@ layout: compress
     </a>
 
     {% include search-loader.html %}
+    <script type="text/javascript" src="/assets/js/lightbox.js"></script>
+    <link rel="stylesheet" href="/assets/css/lightbox.css">
 
   </body>
 
