--- a/_includes/head.html
+++ b/_includes/head.html
@@ -76,5 +76,6 @@
     src="https://cdn.jsdelivr.net/combine/npm/popper.js@1.15.0,npm/bootstrap@4/dist/js/bootstrap.min.js"></script>
 
   {% include js-selector.html %}
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6215800856413580"
+  crossorigin="anonymous"></script>
 </head>
