--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -31,9 +31,9 @@
           {% if item == 'posts' and page.layout == 'post' %}
             {% assign url = '/' %}
           {% endif %}
-          <a href="{{ url | relative_url }}">
+          <!-- <a href="{{ url | relative_url }}"> -->
             {{ item | capitalize }}
-          </a>
+          <!-- </a> -->
         </span>
 
         {% endif %}
