--- a/_includes/mermaid.html
+++ b/_includes/mermaid.html
@@ -14,16 +14,20 @@
     }
 
     let mermaidConf = {
-      theme: initTheme  /* <default|dark|forest|neutral> */
+      theme: initTheme,  /* <default|dark|forest|neutral> */
     };
 
     /* Markdown converts to HTML */
     $("pre").has("code.language-mermaid").each(function() {
       let svgCode = $(this).children().html();
       $(this).addClass("unloaded");
-      $(this).after(`<div class=\"mermaid\">${svgCode}</div>`);
+      $(this).after(`<div id='mermaidSvg' class=\"mermaid\">${svgCode}</div>`);
     });
 
     mermaid.initialize(mermaidConf);
+    // var viewbox = document.getElementById('mermaidSvg').getAttribute('viewbox');
+    // document.getElementById('mermaidSvg').querySelector('svg').setAttribute('viewBox', viewbox);
   });
 </script>
+
+
