--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,3 +4,5 @@
 @import 'main';
 
 /* append your custom style below */
+
+@import url('https://cdn.rawgit.com/lonekorean/gist-syntax-themes/d49b91b3/stylesheets/one-dark.css');
