--- a/_includes/head.html
+++ b/_includes/head.html
@@ -94,5 +94,6 @@
   {% include metadata-hook.html %}
 
   <!-- adsense meta tag -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6215800856413580" crossorigin="anonymous"></script>
   <meta name="google-adsense-account" content="ca-pub-6215800856413580">
 </head>
